<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_flat_name"
        android:layout_width="119dp"
        android:layout_height="43dp"
        android:gravity="center"
        android:text="@string/flat_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092" />

    <Button
        android:id="@+id/btn_room_mates"
        android:layout_width="199dp"
        android:layout_height="62dp"
        android:text="@string/room_mates"
        app:layout_constraintBottom_toTopOf="@+id/btn_shopping_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_flat_name"
        app:layout_constraintVertical_bias="0.967" />

    <Button
        android:id="@+id/btn_shopping_list"
        android:layout_width="199dp"
        android:layout_height="62dp"
        android:text="@string/shopping_list"
        app:layout_constraintBottom_toTopOf="@+id/btn_cleaning_schedule"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_flat_name"
        app:layout_constraintVertical_bias="0.97" />

    <Button
        android:id="@+id/btn_cleaning_schedule"
        android:layout_width="199dp"
        android:layout_height="62dp"
        android:layout_marginTop="308dp"
        android:text="@string/cleaning_schedule"
        app:layout_constraintBottom_toTopOf="@+id/btn_financing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_flat_name"
        app:layout_constraintVertical_bias="0.906" />

    <Button
        android:id="@+id/btn_financing"
        android:layout_width="199dp"
        android:layout_height="62dp"
        android:text="@string/financing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_flat_name"
        app:layout_constraintVertical_bias="0.866" />

    <TextView
        android:id="@+id/tv_street_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/street_name"
        app:layout_constraintBottom_toTopOf="@+id/tv_street_number"
        app:layout_constraintEnd_toStartOf="@+id/tv_street_name_value"
        app:layout_constraintHorizontal_bias="0.219"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_flat_name"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_street_name_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text='"StreetName"'
        app:layout_constraintBottom_toTopOf="@+id/tv_street_number_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.862"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_flat_name"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_street_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stree_number"
        app:layout_constraintBottom_toTopOf="@+id/tv_city"
        app:layout_constraintEnd_toStartOf="@+id/tv_street_number_value"
        app:layout_constraintHorizontal_bias="0.234"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_flat_name"
        app:layout_constraintVertical_bias="0.734" />

    <TextView
        android:id="@+id/tv_street_number_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text='"StreetNumber"'
        app:layout_constraintBottom_toTopOf="@+id/tv_city_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.898"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_flat_name"
        app:layout_constraintVertical_bias="0.728" />

    <TextView
        android:id="@+id/tv_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/city"
        app:layout_constraintBottom_toTopOf="@+id/tv_country"
        app:layout_constraintEnd_toStartOf="@+id/tv_city_value"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_flat_name"
        app:layout_constraintVertical_bias="0.893" />

    <TextView
        android:id="@+id/tv_city_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text='"City"'
        app:layout_constraintBottom_toTopOf="@+id/tv_country_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.746"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_flat_name"
        app:layout_constraintVertical_bias="0.802" />

    <TextView
        android:id="@+id/tv_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country"
        app:layout_constraintBottom_toTopOf="@+id/btn_room_mates"
        app:layout_constraintEnd_toStartOf="@+id/tv_country_value"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_flat_name"
        app:layout_constraintVertical_bias="0.698" />

    <TextView
        android:id="@+id/tv_country_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text='"Country"'
        app:layout_constraintBottom_toTopOf="@+id/btn_room_mates"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.798"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_flat_name"
        app:layout_constraintVertical_bias="0.698" />

</androidx.constraintlayout.widget.ConstraintLayout>